--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
 	<dimen name="big_padding">32dp</dimen>
 	<dimen name="huge_padding">48dp</dimen>
 
+	<dimen name="small_icon_size">16dp</dimen>
 	<dimen name="icon_size">24dp</dimen>
 	<dimen name="icon_button_size">32dp</dimen>
 
