--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<dimen name="size_0">0dp</dimen>
+	<dimen name="size_4">4dp</dimen>
+	<dimen name="size_10">10dp</dimen>
+	<dimen name="size_200">200dp</dimen>
 
 	<dimen name="rounded_corners">4dp</dimen>
 
