--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
 	<color name="white">#FFFFFF</color>
 	<color name="light_grey">#CCCCCC</color>
 	<color name="grey">#6F6F6F</color>
+	<color name="orange">#FF9800</color>
 </resources>
