--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
 	<color name="light_grey">#CCCCCC</color>
 	<color name="grey">#6F6F6F</color>
 	<color name="orange">#FF9800</color>
+    <color name="semi_transparent">#4D000000</color>
 </resources>
